--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "LearnLingo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://polaolka.github.io/LearnLingo/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
